--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -201,7 +201,6 @@
     color: $grey-color;
     display: block;
     border-radius: $default-border-radius;
-    width: 400px;
     margin-bottom: 1em;
 }
 
